<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.r30_a.testlayout.cellBean.CellPageActivity">


    <Button
        android:id="@+id/btn33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/cellset"
        android:layout_marginBottom="32dp"
        android:layout_toStartOf="@+id/cellset"
        android:text="設定圖形鎖" />

    <Button
        android:id="@+id/toCellCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBaseline="@+id/btn33"
        android:layout_alignBottom="@+id/btn33"
        android:layout_toEndOf="@+id/cellset"
        android:layout_weight="1"
        android:text="驗證圖形鎖"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn33"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <Button
        android:id="@+id/cellset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="設定" />
</RelativeLayout>
